syntax = "proto3";

package types;

import "google/protobuf/timestamp.proto";

message User {
    string id = 1;
    string email = 2;
    string name = 3;
    google.protobuf.Timestamp created_at = 4;
    string avatar_url = 5;
    string bio = 6;
}